# torchlib_template

./: .gitignore  CMakeLists.txt  cleanBuild.sh  symbol  symbol_UND  symbol_UND_cv  tmp.txt
app/: CMakeLists.txt  main.cpp
cmake/: pathSetting.cmake
external_libs/libtorch-cxx11-abi-shared-with-deps-2.2.2+cpu/libtorch/: build-hash  build-version
libs/lib1/: CMakeLists.txt  lib1-pub-impl.cpp
libs/lib1/include/lib1/: lib1-pub-header.h
libs/lib1/tests/: main.cpp
